--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,88 +1,84 @@
-name: Katalon-CI
+name: Katalon Test Execution
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
   katalon-test:
     runs-on: ubuntu-latest
 
+    env:
+      KATALON_VERSION: 9.2.0
+      KATALON_PROJECT_PATH: DemoTest.prj
+      KATALON_TEST_SUITE: "Test Suites/DemoSuite"
+      BROWSER: "Chrome (headless)"
+
     steps:
+      # 1. Checkout repo
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2. Set up Java
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
+      # 3. Install dependencies
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -yqq unzip curl jq xvfb libnss3
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libgconf-2-4 libnss3
 
-      - name: Get latest stable Chrome-for-Testing version
-        id: get_chrome_version
+      # 4. Get latest stable Chrome-for-Testing version
+      - name: Get latest Chrome version
+        id: chrome_version
         run: |
-          set -e
           LATEST_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
-          echo "Using Chrome version: $LATEST_VERSION"
-          echo "chrome_version=$LATEST_VERSION" >> $GITHUB_ENV
+          echo "CHROME_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
 
-      - name: Download ChromeDriver and Chrome for Testing
+      # 5. Download Chrome-for-Testing and ChromeDriver
+      - name: Install Chrome and ChromeDriver
         run: |
-          set -e
-          echo "Using Chrome version: $chrome_version"
-
-          # Download ChromeDriver
-          curl -s -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$chrome_version/linux64/chromedriver-linux64.zip"
-          unzip chromedriver.zip
-          chmod +x chromedriver-linux64/chromedriver
-          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
-
-          # Download Chrome itself
-          curl -s -o chrome.zip "https://storage.googleapis.com/chrome-for-testing-public/$chrome_version/linux64/chrome-linux64.zip"
+          # Download Chrome
+          curl -s -o chrome.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROME_VERSION/linux64/chrome-linux64.zip"
           unzip chrome.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
 
-      - name: Start virtual display
-        run: |
-          set -e
-          Xvfb :99 -screen 0 1920x1080x24 &
-          export DISPLAY=:99
-          sleep 5
+          # Download ChromeDriver
+          curl -s -o chromedriver.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
+          unzip chromedriver.zip
+          chmod +x chromedriver-linux64/chromedriver
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
 
-      - name: Download and Extract Katalon Studio Engine
-        env:
-          KATALON_API_KEY: ${{ secrets.KATALON_API_KEY }}
+      # 6. Download Katalon Studio Engine (Linux)
+      - name: Download Katalon Studio Engine
         run: |
-          set -e
-          curl -L -O "https://download.katalon.com/9.2.0/Katalon_Studio_Engine_Linux_64-9.2.0.tar.gz"
-          tar -xvzf Katalon_Studio_Engine_Linux_64-9.2.0.tar.gz
-          chmod +x Katalon_Studio_Engine_Linux_64-9.2.0/katalonc
+          wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
 
-      - name: Run Katalon tests
-        env:
-          KATALON_API_KEY: ${{ secrets.KATALON_API_KEY }}
-          DISPLAY: :99
-          KATALON_DISABLE_AUTO_UPDATE_DRIVER: true
+      # 7. Run Katalon tests
+      - name: Run Katalon Test Suite
         run: |
-          export DISPLAY=:99
-          ./Katalon_Studio_Engine_Linux_64-9.2.0/katalonc \
-            -noSplash \
+          ./Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/katalon -noSplash \
             -runMode=console \
-            -projectPath=$(pwd)/DemoTest.prj \
+            -projectPath=$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH \
             -retry=0 \
-            -testSuitePath="Test Suites/DemoSuite" \
-            -executionProfile="default" \
-            -browserType="Chrome (headless)" \
-            -apiKey="${KATALON_API_KEY}" \
-            --config webui.driver.chrome.path=/usr/local/bin/chromedriver
+            -testSuitePath="$KATALON_TEST_SUITE" \
+            -executionProfile=default \
+            -browserType="$BROWSER" \
+            --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
+            --config webui.autoUpdateDrivers=true
+
+      # 8. Archive Reports
+      - name: Archive Reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: katalon-reports
+          path: |
+            $GITHUB_WORKSPACE/Reports/**
