--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -17,11 +17,11 @@ jobs:
       BROWSER: "Chrome (headless)"
 
     steps:
-      # 1. Checkout repo
+      # 1. Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Set up Java
+      # 2. Set up Java 17
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
@@ -62,7 +62,7 @@ jobs:
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
 
-      # 7. Run Katalon tests
+      # 7. Run Katalon Test Suite
       - name: Run Katalon Test Suite
         run: |
           ./Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/katalon -noSplash \
@@ -75,10 +75,14 @@ jobs:
             --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
             --config webui.autoUpdateDrivers=true
 
-      # 8. Archive Reports
+      # 8. Archive Reports using upload-artifact@v4
       - name: Archive Reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: katalon-reports
           path: |
-            $GITHUB_WORKSPACE/Reports/**
+            ${{ github.workspace }}/Reports/**
+          retention-days: 14
+          include-hidden-files: true
+          # If no files found, treat as failure so you catch missing outputs
+          if-no-files-found: error
