--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -17,7 +17,7 @@ jobs:
       BROWSER: "Chrome (headless)"
 
     steps:
-      # 1. Checkout code
+      # 1. Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -34,32 +34,38 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3
 
-      # 4. Workaround: Install libgconf-2-4 from Ubuntu 22.04 (Jammy)
+      # 4. Workaround: Install libdbus-glib-1-2 (dependency for libgconf-2-4)
+      - name: Install libdbus-glib-1-2
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libdbus-glib-1-2
+
+      # 5. Workaround: Install libgconf-2-4 from Ubuntu 22.04 (Jammy)
       - name: Install libgconf-2-4 workaround
         run: |
-          # enable universe repository (just in case)
           sudo add-apt-repository universe -y
           sudo apt-get update
 
-          # Download the .deb packages from Ubuntu Jammy
+          # Download .deb packages from Jammy (if not locally cached)
           wget http://archive.ubuntu.com/ubuntu/pool/universe/g/gconf/gconf2-common_3.2.6-7ubuntu2_all.deb
           wget http://archive.ubuntu.com/ubuntu/pool/universe/g/gconf/libgconf-2-4_3.2.6-7ubuntu2_amd64.deb
 
-          # Install gconf2 common first, then libgconf
+          # Install common first
           sudo dpkg -i gconf2-common_3.2.6-7ubuntu2_all.deb
+          # Then the library
           sudo dpkg -i libgconf-2-4_3.2.6-7ubuntu2_amd64.deb
 
-          # Fix broken dependencies if any
+          # Fix any missing dependencies (including libdbus-glib etc.)
           sudo apt-get install -f -y
 
-      # 5. Get Chrome version
+      # 6. Get latest Chrome version
       - name: Get latest Chrome version
         id: chrome_version
         run: |
           LATEST_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
           echo "CHROME_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
 
-      # 6. Install Chrome and ChromeDriver
+      # 7. Install Chrome and ChromeDriver
       - name: Install Chrome and ChromeDriver
         run: |
           curl -s -o chrome.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROME_VERSION/linux64/chrome-linux64.zip"
@@ -72,13 +78,13 @@ jobs:
           chmod +x chromedriver-linux64/chromedriver
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
 
-      # 7. Download Katalon Studio Engine (Linux)
+      # 8. Download Katalon Studio Engine (Linux)
       - name: Download Katalon Studio Engine
         run: |
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
 
-      # 8. Run Katalon Test Suite
+      # 9. Run the Katalon Test Suite
       - name: Run Katalon Test Suite
         run: |
           ./Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/katalon -noSplash \
@@ -91,7 +97,7 @@ jobs:
             --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
             --config webui.autoUpdateDrivers=true
 
-      # 9. Archive Reports using upload-artifact@v4
+      # 10. Archive Reports using upload-artifact@v4
       - name: Archive Reports
         uses: actions/upload-artifact@v4
         with:
