--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -2,8 +2,7 @@ name: Katalon Test Execution
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -41,15 +40,13 @@ jobs:
           sudo add-apt-repository universe -y
           sudo apt-get update
 
-          # Download .deb packages from Ubuntu 22.04 (Jammy)
+          # Download .deb packages
           wget http://archive.ubuntu.com/ubuntu/pool/universe/g/gconf/gconf2-common_3.2.6-7ubuntu2_all.deb
           wget http://archive.ubuntu.com/ubuntu/pool/universe/g/gconf/libgconf-2-4_3.2.6-7ubuntu2_amd64.deb
 
-          # Install
           sudo dpkg -i gconf2-common_3.2.6-7ubuntu2_all.deb
           sudo dpkg -i libgconf-2-4_3.2.6-7ubuntu2_amd64.deb
 
-          # Fix dependencies
           sudo apt-get install -f -y
 
       - name: Get Chrome & ChromeDriver download URLs
@@ -65,34 +62,47 @@ jobs:
 
       - name: Download and install Chrome and ChromeDriver
         run: |
-          # Download Chrome
+          # Chrome
           curl -sL -o chrome-linux64.zip "$CHROME_DOWNLOAD_URL"
           unzip chrome-linux64.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
 
-          # Download ChromeDriver
+          # ChromeDriver
           curl -sL -o chromedriver-linux64.zip "$CHROMEDRIVER_DOWNLOAD_URL"
           unzip chromedriver-linux64.zip
-
-          # Make binary executable and move it
           chmod +x chromedriver-linux64/chromedriver
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
 
       - name: Download Katalon Studio Engine (Linux)
         run: |
-          wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
-          tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          wget -q "https://github.com/katalon-studio/katalon-studio/releases/download/v${KATALON_VERSION}/Katalon_Studio_Engine_Linux_64-${KATALON_VERSION}.tar.gz"
+          tar -xzf "Katalon_Studio_Engine_Linux_64-${KATALON_VERSION}.tar.gz"
+
+      - name: Debug: List extracted files to find Katalon Engine folder
+        run: |
+          echo "Listing contents:"
+          ls -lah
+          echo "Directories starting with Katalon_Studio_Engine:"
+          ls -d Katalon_Studio_Engine_Linux_64-* || ls
 
       - name: Run Katalon Test Suite
         run: |
-          ./Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/katalon -noSplash \
+          # Dynamically get engine folder
+          KSE_DIR=$(ls -d Katalon_Studio_Engine_Linux_64-* | head -n 1)
+          echo "Using engine directory: $KSE_DIR"
+
+          # Ensure executable
+          chmod +x "$KSE_DIR/katalon"
+
+          # Run tests
+          "./$KSE_DIR/katalon" -noSplash \
             -runMode=console \
-            -projectPath=$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH \
+            -projectPath="${GITHUB_WORKSPACE}/${KATALON_PROJECT_PATH}" \
             -retry=0 \
-            -testSuitePath="$KATALON_TEST_SUITE" \
+            -testSuitePath="${KATALON_TEST_SUITE}" \
             -executionProfile=default \
-            -browserType="$BROWSER" \
+            -browserType="${BROWSER}" \
             --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
             --config webui.autoUpdateDrivers=true
 
