--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -62,51 +62,12 @@ jobs:
 
       - name: Download and install Chrome and ChromeDriver
         run: |
-          # Chrome
           curl -sL -o chrome-linux64.zip "$CHROME_DOWNLOAD_URL"
           unzip chrome-linux64.zip
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
 
-          # ChromeDriver
           curl -sL -o chromedriver-linux64.zip "$CHROMEDRIVER_DOWNLOAD_URL"
           unzip chromedriver-linux64.zip
           chmod +x chromedriver-linux64/chromedriver
-          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
-
-      - name: Download Katalon Studio Engine (Linux)
-        run: |
-          wget -q "https://github.com/katalon-studio/katalon-studio/releases/download/v${KATALON_VERSION}/Katalon_Studio_Engine_Linux_64-${KATALON_VERSION}.tar.gz"
-          tar -xzf "Katalon_Studio_Engine_Linux_64-${KATALON_VERSION}.tar.gz"
-
-      - name: Debug: List extracted files to find Katalon Engine folder
-        run: |
-          echo "Listing contents in workspace:"
-          ls -lah
-          echo "Directories matching pattern:"
-          ls -d Katalon_Studio_Engine_Linux_64-* || ls
-
-      - name: Run Katalon Test Suite
-        run: |
-          KSE_DIR=$(ls -d Katalon_Studio_Engine_Linux_64-* | head -n 1)
-          echo "Using engine directory: $KSE_DIR"
-          chmod +x "$KSE_DIR/katalon"
-          "./$KSE_DIR/katalon" -noSplash \
-            -runMode=console \
-            -projectPath="${GITHUB_WORKSPACE}/${KATALON_PROJECT_PATH}" \
-            -retry=0 \
-            -testSuitePath="${KATALON_TEST_SUITE}" \
-            -executionProfile=default \
-            -browserType="${BROWSER}" \
-            --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
-            --config webui.autoUpdateDrivers=true
-
-      - name: Archive Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: katalon-reports
-          path: |
-            ${{ github.workspace }}/Reports/**
-          retention-days: 14
-          include-hidden-files: true
-          if-no-files-found: error
+          sudo mv chromedriver-linux64/chrome
