--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -2,7 +2,8 @@ name: Katalon Test Execution
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -16,27 +17,68 @@ jobs:
       BROWSER: "Chrome (headless)"
 
     steps:
+      # 1. Checkout repo
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2. Set up Java
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
-      - name: Install general dependencies
+      # 3. Install dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3 libxss1 libappindicator3-1 libindicator3-1
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libgconf-2-4 libnss3
 
-      - name: Set up Chrome
-        uses: browser-actions/setup-chrome@v1
-        with:
-          chrome-version: '120'
-          install-chromedriver: true
-          install-dependencies: true
-
-      - name: Run Katalon tests
+      # 4. Get latest stable Chrome-for-Testing version
+      - name: Get latest Chrome version
+        id: chrome_version
         run: |
-          ./katalon-execute.sh -noSplash -retry=0 -testSuitePath="Test Suites/DemoSuite" -browserType="Chrome (headless)" -executionProfile="default" -apiKey=${{ secrets.KATALON_API_KEY }} --config -webui.autoUpdateDrivers=true
+          LATEST_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
+          echo "CHROME_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
+
+      # 5. Download Chrome-for-Testing and ChromeDriver
+      - name: Install Chrome and ChromeDriver
+        run: |
+          # Download Chrome
+          curl -s -o chrome.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROME_VERSION/linux64/chrome-linux64.zip"
+          unzip chrome.zip
+          sudo mv chrome-linux64 /opt/google/chrome
+          sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
+
+          # Download ChromeDriver
+          curl -s -o chromedriver.zip "https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
+          unzip chromedriver.zip
+          chmod +x chromedriver-linux64/chromedriver
+          sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
+
+      # 6. Download Katalon Studio Engine (Linux)
+      - name: Download Katalon Studio Engine
+        run: |
+          wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+
+      # 7. Run Katalon tests
+      - name: Run Katalon Test Suite
+        run: |
+          ./Katalon_Studio_Engine_Linux_64-$KATALON_VERSION/katalon -noSplash \
+            -runMode=console \
+            -projectPath=$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH \
+            -retry=0 \
+            -testSuitePath="$KATALON_TEST_SUITE" \
+            -executionProfile=default \
+            -browserType="$BROWSER" \
+            --config webui.driver.chrome.path=/usr/local/bin/chromedriver \
+            --config webui.autoUpdateDrivers=true
+
+      # 8. Archive Reports
+      - name: Archive Reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: katalon-reports
+          path: |
+            $GITHUB_WORKSPACE/Reports/**
