--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -17,7 +17,7 @@ jobs:
       BROWSER: "Chrome (headless)"
 
     steps:
-      # 1. Checkout repo
+      # 1. Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -32,7 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl jq xvfb libxi6 libgconf-2-4 libnss3
+          sudo apt-get install -y unzip curl jq xvfb libxi6 libnss3
 
       # 4. Get latest stable Chrome-for-Testing version
       - name: Get latest Chrome version
@@ -77,7 +77,7 @@ jobs:
 
       # 8. Archive Reports
       - name: Archive Reports
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: katalon-reports
           path: |
