--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -20,6 +20,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Debug – show workspace & version vars
+        run: |
+          echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
+          echo "KATALON_VERSION = $KATALON_VERSION"
+          echo "Expected Katalon engine directory: $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
+          ls -la $GITHUB_WORKSPACE
+
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
@@ -36,30 +43,49 @@ jobs:
         run: |
           LATEST_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
           echo "CHROME_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
+          echo "Downloaded Chrome-for-Testing version: $LATEST_VERSION"
 
       - name: Install Chrome and ChromeDriver
         run: |
           # Download Chrome
+          echo "Downloading Chrome zip to $(pwd)/chrome.zip"
           curl -sL -o chrome.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chrome-linux64.zip"
+          echo "Downloaded chrome.zip, file size:"
+          ls -lh chrome.zip
           unzip chrome.zip
+          echo "After unzip, contents of current dir:"
+          ls -la
+
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
 
           # Download ChromeDriver
+          echo "Downloading ChromeDriver zip"
           curl -sL -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
+          echo "Downloaded chromedriver.zip size:"
+          ls -lh chromedriver.zip
           unzip chromedriver.zip
           chmod +x chromedriver-linux64/chromedriver
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
 
       - name: Download Katalon Studio Engine
         run: |
+          echo "Downloading Katalon Studio Engine version $KATALON_VERSION"
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          echo "Downloaded tar.gz, file size:"
+          ls -lh Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
+          echo "After extraction, list workspace contents:"
+          ls -la $GITHUB_WORKSPACE
+          echo "List extracted Katalon dir:"
+          ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION || echo "Directory not found"
 
       - name: Run Katalon Test Suite
         run: |
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
-          chmod +x "$KATALON_DIR/katalon"
+          echo "Using KATALON_DIR = $KATALON_DIR"
+          ls -la "$KATALON_DIR" || { echo "Katalon dir missing!"; exit 1; }
+          chmod +x "$KATALON_DIR/katalon" || { echo "katalon executable not found"; exit 1; }
           "$KATALON_DIR/katalon" -noSplash \
             -runMode=console \
             -projectPath=$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH \
