--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Debug – show workspace & version vars
+      - name: Debug — show workspace & version vars
         run: |
           echo "GITHUB_WORKSPACE = $GITHUB_WORKSPACE"
           echo "KATALON_VERSION = $KATALON_VERSION"
@@ -43,52 +43,46 @@ jobs:
         run: |
           LATEST_VERSION=$(curl -s https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions.json | jq -r '.channels.Stable.version')
           echo "CHROME_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
-          echo "Downloaded Chrome-for-Testing version: $LATEST_VERSION"
+          echo "Chrome version set to $LATEST_VERSION"
 
       - name: Install Chrome and ChromeDriver
         run: |
-          # Download Chrome
-          echo "Downloading Chrome zip to $(pwd)/chrome.zip"
+          echo "Downloading Chrome"
           curl -sL -o chrome.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chrome-linux64.zip"
-          echo "Downloaded chrome.zip, file size:"
           ls -lh chrome.zip
           unzip chrome.zip
-          echo "After unzip, contents of current dir:"
           ls -la
 
           sudo mv chrome-linux64 /opt/google/chrome
           sudo ln -sf /opt/google/chrome/chrome /usr/bin/google-chrome
 
-          # Download ChromeDriver
-          echo "Downloading ChromeDriver zip"
+          echo "Downloading ChromeDriver"
           curl -sL -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROME_VERSION/linux64/chromedriver-linux64.zip"
-          echo "Downloaded chromedriver.zip size:"
           ls -lh chromedriver.zip
           unzip chromedriver.zip
           chmod +x chromedriver-linux64/chromedriver
           sudo mv chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
 
-      - name: Download Katalon Studio Engine
+      - name: Download and extract Katalon Studio Engine
         run: |
           echo "Downloading Katalon Studio Engine version $KATALON_VERSION"
           wget -q https://github.com/katalon-studio/katalon-studio/releases/download/v$KATALON_VERSION/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
-          echo "Downloaded tar.gz, file size:"
           ls -lh Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           tar -xzf Katalon_Studio_Engine_Linux_64-$KATALON_VERSION.tar.gz
           echo "After extraction, list workspace contents:"
           ls -la $GITHUB_WORKSPACE
-          echo "List extracted Katalon dir:"
-          ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION || echo "Directory not found"
+          echo "Listing extracted Katalon engine directory:"
+          ls -la $GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION
 
       - name: Run Katalon Test Suite
         run: |
           KATALON_DIR="$GITHUB_WORKSPACE/Katalon_Studio_Engine_Linux_64-$KATALON_VERSION"
           echo "Using KATALON_DIR = $KATALON_DIR"
           ls -la "$KATALON_DIR" || { echo "Katalon dir missing!"; exit 1; }
-          chmod +x "$KATALON_DIR/katalon" || { echo "katalon executable not found"; exit 1; }
-          "$KATALON_DIR/katalon" -noSplash \
+          chmod +x "$KATALON_DIR/katalonc" || { echo "katalonc executable not found"; exit 1; }
+          "$KATALON_DIR/katalonc" -noSplash \
             -runMode=console \
-            -projectPath=$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH \
+            -projectPath="$GITHUB_WORKSPACE/$KATALON_PROJECT_PATH" \
             -retry=0 \
             -testSuitePath="$KATALON_TEST_SUITE" \
             -executionProfile=default \
