--- a/.github/workflows/myWorkflow.yml
+++ b/.github/workflows/myWorkflow.yml
@@ -89,17 +89,18 @@ jobs:
             -apiKey="${{ secrets.KATALON_API_KEY }}" \
             --config -webui.autoUpdateDrivers=true
 
-      - name: Archive Reports
+      - name: Archive Katalon Reports
         uses: actions/upload-artifact@v4
         with:
           name: katalon-reports
-          path: |
-            $GITHUB_WORKSPACE/Reports/**
+          path: ${{ github.workspace }}/Reports/**
 
-      - name: Publish Test Results Summary
-        if: always()
+      - name: Generate JUnit Test Report Summary
         uses: mikepenz/action-junit-report@v4
         with:
-          report_paths: "**/Reports/**/*.xml"
+          report_paths: ${{ github.workspace }}/Reports/**/*.xml
           detailed_summary: true
           include_passed: true
+          job_summary: true
+          check_name: "JUnit Test Report"
+          fail_on_failure: false
