--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,7 +1,7 @@
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
 report.videoRecorderOption="{\\"enable\\"\:false,\\"useBrowserRecorder\\"\:true,\\"videoFormat\\"\:\\"AVI\\",\\"videoQuality\\"\:\\"LOW\\",\\"recordAllTestCases\\"\:false,\\"allowedRecordIfFailed\\"\:true,\\"allowedRecordIfPassed\\"\:false}"
 execution.default.webUi.excludeKeywords="[]"
-execution.default.webUi.methodsPriorityOrderNew="XPATH,true;SMART_LOCATOR,true;BASIC,true;CSS,true;IMAGE,true"
+execution.default.webUi.methodsPriorityOrderNew="CSS,true;XPATH,true;SMART_LOCATOR,true;BASIC,true;IMAGE,true"
 execution.default.webUi.selfHealingEnabled=true
 execution.default.bufferedSelectorMethod="XPATH"
 execution.default.isUsingSmartLocator=false
